--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <link rel="stylesheet" href="css/vendor/owl.theme.default.min.css" /> -->
     <link rel="stylesheet" href="css/vendor/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.min.css" />
-    <link rel="icon" href="img/logoico.ico" />
+    <link rel="icon" href="img/main.png" />
     <title>All Time High</title>
     <style>
       @font-face {
