--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                             <p class="section-hero__text wow animate__animated animate__fadeIn">Now, it's time for $ATH to take its rightful place as the king of the memecoin world.
                             </p>
                             <h1 class="section-hero__title wow animate__animated animate__fadeIn">
-                                The meme $ATH COIN
+                                ALL TIME HIGH
+                                
                             </h1>
                         </div>
                     </div>
