--- a/index.html
+++ b/index.html
@@ -103,12 +103,20 @@
             <span class="header__social-follow">Follow us</span>
             <ul class="social__list">
               <li class="social__item social__item--twitter">
-                <a class="social__link" href="twitterlink" target="_blank">
+                <a
+                  class="social__link"
+                  href="https://twitter.com/AllTimeHighETH"
+                  target="_blank"
+                >
                   <span class="screen-reader-text">Twitter</span>
                 </a>
               </li>
               <li class="social__item social__item--discord">
-                <a class="social__link" href="tglink" target="_blank">
+                <a
+                  class="social__link"
+                  href="https://t.me/AllTimeHighERC20"
+                  target="_blank"
+                >
                   <span class="screen-reader-text">Telegram</span>
                 </a>
               </li>
@@ -316,7 +324,7 @@
                         <h2 class="section-banner__title">Join our community</h2>
                         <p class="section-banner__text">We'll be glad to have you with us, see you soon!</p>
                     </div>
-                    <a href="tglink" class="section-banner__link button button--dark">Join Telegram</a>
+                    <a href="https://t.me/AllTimeHighERC20" class="section-banner__link button button--dark">Join Telegram</a>
                 </div>
             </div>
         </section>
@@ -330,12 +338,20 @@
           <div class="footer__social">
             <ul class="social__list">
               <li class="social__item social__item--twitter">
-                <a class="social__link" href="twitterlink" target="_blank">
+                <a
+                  class="social__link"
+                  href="https://twitter.com/AllTimeHighETH"
+                  target="_blank"
+                >
                   <span class="screen-reader-text">Twitter</span>
                 </a>
               </li>
               <li class="social__item social__item--discord">
-                <a class="social__link" href="tglink" target="_blank">
+                <a
+                  class="social__link"
+                  href="https://t.me/AllTimeHighERC20"
+                  target="_blank"
+                >
                   <span class="screen-reader-text">Telegram</span>
                 </a>
               </li>
