--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__top">
-          <a class="footer__brand" href="./index.html"> MOONBAG </a>
+          <a class="footer__brand" href="./index.html"> ATH </a>
           <div class="footer__social">
             <ul class="social__list">
               <li class="social__item social__item--twitter">
