--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             All Time High
                         </h2>
                         <div class="section-perks__text wow animate__animated animate__fadeIn" data-wow-delay="0.2s">
-                            $ATH - mystical bag that grants its bearer the power to travel through the moonlit realms and unlock hidden wonders.
+                            ATH tokens: where Pepe reach higher than your weekend plans. Get ready for the ultimate crypto trip – we're talking "All Time High" vibes! Picture Pepe getting high as a satellite, orbiting in a galaxy of pure euphoria. It's not just a token; it's a one-way ticket to the meme moon. Grab your spacesuit and join the cosmic blaze with ATH – because Pepe said, "To the moon, and then some!" 
 
                             <br>
                             <br>
