--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <a
-            href="https://app.uniswap.org/#/swap?outputCurrency=0x00000000000000000000"
+            href="https://app.uniswap.org/tokens/ethereum/0x333242d120492c24027224bd8f1eb2a2bdcb7060"
             alt=""
             class="header__button button button--primary"
             >Buy Now !</a
@@ -209,7 +209,7 @@
                             <br>
                             <br>
 
-                            CA: &nbsp;  0x00000000000000000000
+                            CA: &nbsp;  0x333242D120492c24027224bD8F1eb2a2BdcB7060
 
                         </div>
                     </div>
