--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
         <div class="swiper-pagination"></div>
       </div>
     </section>
+    <center>
+      <h1 style="margin: 50px 0;">GM map</h1>
+    </center>
     <section id="Roadmap" class="section-blocks">
       <div class="section-blocks__container container">
         <div class="row">
