--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="section-perks__columns row">
           <div class="section-perks__column col-md-6">
             <h2 class="section-perks__title wow animate__animated animate__fadeInLeft">
-              All Time High
+              GM PEPE
             </h2>
             <div class="section-perks__text wow animate__animated animate__fadeIn" data-wow-delay="0.2s">
               Gm tokens, where Pepe reach higher than your weekend plans. Get ready for the ultimate crypto trip – <br>
